change to UTF-8

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="personal-info">
               <div class="info-item">
                 <span class="info-title">Name:</span>
-                <span class="info-detail">Kenny Chen (³¯¬ê»¨)</span>
+                <span class="info-detail">Kenny Chen (é™³ç¦¹è±ª)</span>
               </div>
               <div class="info-item">
                 <span class="info-title">Education:</span>
@@ -426,7 +426,7 @@
               <i class="fab fa-linkedin"></i>
               <div>
                 <h3>LinkedIn</h3>
-                <p>linkedin.com/in/¬ê»¨-³¯-1271422a9</p>
+                <p>linkedin.com/in/ç¦¹è±ª-é™³-1271422a9</p>
               </div>
             </div>
           </div>
