--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           </div>
         </div>
         <div class="hero-image">
+          <img src="my.jpg" alt="Hero Image" />
           <div class="shape"></div>
         </div>
       </section>
