--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
           </div>
         </div>
         <div class="hero-image">
-          <img src="my.jpg" alt="Hero Image" />
-          <div class="shape"></div>
+          <div class="shape">
+            <img src="my.jpg" alt="Hero Image" />
+          </div>
         </div>
       </section>
 
