--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
           </div>
         </div>
         <div class="hero-image">
-          <div class="shape">
-            <img src="my.jpg" alt="Hero Image" />
-          </div>
+          <div class="shape"></div>
+          <img src="my.jpg" alt="Hero Image" class="hero-photo" />
         </div>
       </section>
 
