change the link

--- a/index.html
+++ b/index.html
@@ -142,42 +142,42 @@
                 <i class="icon-skill fab fa-c"></i>
                 <span>C</span>
                 <div class="skill-bar">
-                  <div class="skill-level" style="width: 85%"></div>
+                  <div class="skill-level" style="width: 70%"></div>
                 </div>
               </div>
               <div class="skill-item" data-skill="C++">
                 <i class="icon-skill fab fa-cuttlefish"></i>
                 <span>C++</span>
                 <div class="skill-bar">
-                  <div class="skill-level" style="width: 80%"></div>
+                  <div class="skill-level" style="width: 70%"></div>
                 </div>
               </div>
               <div class="skill-item" data-skill="Python">
                 <i class="icon-skill fab fa-python"></i>
                 <span>Python</span>
                 <div class="skill-bar">
-                  <div class="skill-level" style="width: 90%"></div>
+                  <div class="skill-level" style="width: 60%"></div>
                 </div>
               </div>
               <div class="skill-item" data-skill="R">
                 <i class="icon-skill fab fa-r-project"></i>
                 <span>R</span>
                 <div class="skill-bar">
-                  <div class="skill-level" style="width: 75%"></div>
+                  <div class="skill-level" style="width: 50%"></div>
                 </div>
               </div>
               <div class="skill-item" data-skill="Java">
                 <i class="icon-skill fab fa-java"></i>
                 <span>Java</span>
                 <div class="skill-bar">
-                  <div class="skill-level" style="width: 80%"></div>
+                  <div class="skill-level" style="width: 55%"></div>
                 </div>
               </div>
               <div class="skill-item" data-skill="JavaScript">
                 <i class="icon-skill fab fa-js"></i>
                 <span>JavaScript</span>
                 <div class="skill-bar">
-                  <div class="skill-level" style="width: 75%"></div>
+                  <div class="skill-level" style="width: 50%"></div>
                 </div>
               </div>
             </div>
@@ -190,14 +190,14 @@
                 <i class="icon-skill fab fa-html5"></i>
                 <span>HTML5</span>
                 <div class="skill-bar">
-                  <div class="skill-level" style="width: 85%"></div>
+                  <div class="skill-level" style="width: 55%"></div>
                 </div>
               </div>
               <div class="skill-item" data-skill="CSS3">
                 <i class="icon-skill fab fa-css3-alt"></i>
                 <span>CSS3</span>
                 <div class="skill-bar">
-                  <div class="skill-level" style="width: 80%"></div>
+                  <div class="skill-level" style="width: 55%"></div>
                 </div>
               </div>
             </div>
@@ -251,7 +251,11 @@
                 <span>LangChain</span>
                 <span>JavaScript</span>
               </div>
-              <a href="https://github.com/kenny1208" class="project-link">
+              <a
+                href="https://github.com/kenny1208/RAG_system"
+                target="_blank"
+                class="project-link"
+              >
                 <i class="fab fa-github"></i> View Project
               </a>
             </div>
@@ -273,7 +277,11 @@
                 <span>LSTM</span>
                 <span>GAT</span>
               </div>
-              <a href="https://github.com/kenny1208" class="project-link">
+              <a
+                href="https://github.com/kenny1208/GNN_Transformer"
+                target="_blank"
+                class="project-link"
+              >
                 <i class="fab fa-github"></i> View Project
               </a>
             </div>
@@ -296,6 +304,7 @@
               </div>
               <a
                 href="https://github.com/Journal-Conference-Progress-Tracker/GAN_Transformer"
+                target="_blank"
                 class="project-link"
               >
                 <i class="fab fa-github"></i> View Project
@@ -317,7 +326,11 @@
                 <span>Java</span>
                 <span>OOP</span>
               </div>
-              <a href="https://github.com/kenny1208" class="project-link">
+              <a
+                href="https://github.com/kenny1208/BankSystem"
+                target="_blank"
+                class="project-link"
+              >
                 <i class="fab fa-github"></i> View Project
               </a>
             </div>
@@ -337,7 +350,6 @@
                 Computer Science and Information Engineering, Bachelor's Degree
               </h4>
               <span class="timeline-date">September 2022 - Present</span>
-              <p>Rank: 26/113</p>
               <p>
                 Core Courses: Machine Learning, Data Mining, R Language Data
                 Processing, Neural Networks and Deep Learning, Artificial
